--- a/index.html
+++ b/index.html
@@ -601,13 +601,13 @@
           <div class="crime">
               <h3>(9)05. Îndreptarea unei arme asupra unui obiect</h3>
               <p class="desc">Orice cetățean care deține asupra lui o armă de foc și o îndreaptă asupra unui obiect cu intenția de a folosi arma pe acel obiect sau doar să țintească înspre acel obiect.<br>● Codul Penal (9)05 reprezintă o infracţiune care se poate pedepsi cu închiderea suspectului.</p>
-              <p class="penalty">SENTINTA: 20 minute</p>
+              <p class="penalty">SENTINTA: 20 minute - AMENDA: 27.750.000</p>
               <p class="desc">● NOTA: Aceasta infractiune se adauga in plus cu (9)01. si (9)02. in functie de caz.</p>
           </div>
           <div class="crime">
               <h3>(9)06. Descărcarea letală a unei arme de foc</h3>
               <p class="desc">Orice cetățean care folosește (descarcă letal) o armă de foc, din greșeală sau fără să aibă vreo explicaţie corectă pentru fapta sa.<br>● Codul Penal (9)06 reprezintă o crimă care se poate pedepsi cu închiderea suspectului.</p>
-              <p class="penalty">SENTINTA: 35 minute</p>
+              <p class="penalty">SENTINTA: 35 minute - AMENDA: 23.500.000</p>
               <p class="desc">● NOTA: Aceasta infractiune se adauga in plus cu (9)01. si (9)02. in functie de caz.</p>
           </div>
           <div class="crime">
