--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       </section>
       
       <section class="section" id="cap6">
-          <p class="chapter-note">ATENTIE: In cazul in care ati savarsit mai multe infractiuni / crime din acest capitol o sa primiti sentinta de la cea mai grava dintre ele. [ Cu exceptia (6)01. / (6)02. in functie de caz ] Insa Politia are obligatia sa va aduca la cunostinta toate faptele savarsite.</p>
+          <p class="chapter-note">ATENTIE: In cazul in care suspectul a savarsit mai multe infractiuni / crime din acest capitol o sa primeasca sentinta de la cea mai grava dintre ele. [ Cu exceptia (6)01. / (6)02. in functie de caz ] Insa aveti obligatia sa ii aduceti la cunostinta toate faptele savarsite.</p>
           <div class="crime">
               <h3>(6)01. Producerea sau detinerea de substanțe ilegale</h3>
               <p class="desc">Orice cetăţean care produce, transportă, creează sau detine substanţe care sunt prevăzute de lege ca fiind ilegale, pe cale chimică sau naturală. Amenda se calculeaza in functie de cantitatea de droguri pe care o detine. ( Exemple: Marijuana / Pulse / Cocaina / LSD etc. )<br>● Codul Penal (6)01 reprezintă o crimă care se poate pedepsi cu închiderea suspectului.</p>
@@ -570,7 +570,7 @@
       </section>
 
       <section class="section" id="cap9">
-          <p class="chapter-note">ATENTIE: In cazul in care ati savarsit mai multe infractiuni / crime din acest capitol o sa primiti sentinta de la cea mai grava dintre ele. [ Cu exceptia (9)05. / (9)06. in functie de caz ] Insa Politia are obligatia sa va aduca la cunostinta toate faptele savarsite.</p>
+          <p class="chapter-note">ATENTIE: In cazul in care suspectul a savarsit mai multe infractiuni / crime din acest capitol o sa primeasca sentinta de la cea mai grava dintre ele. [ Cu exceptia (9)05. / (9)06. in functie de caz ] Insa aveti obligatia sa ii aduceti la cunostinta toate faptele savarsite.</p>
           <div class="crime">
               <h3>(9)01. Posesia unei arme de foc de calibru mic fără permis PORT-ARMĂ</h3>
               <p class="desc">Orice cetățean care deține asupra lui o armă de foc de calibru mic fără să aibă un permis port-armă legal. Arma poate fi considerată "asupra lui" chiar dacă se află în casă sau într-o proprietate ce-i aparține.<br>● Codul Penal (9)01 reprezintă o infracţiune care se poate pedepsi cu închiderea suspectului.</p>
