--- a/pages/home_vpd.html
+++ b/pages/home_vpd.html
@@ -22,7 +22,7 @@
         
         <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.05)'" onmouseout="this.style.background='rgba(255,255,255,0.03)'">
             <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);">
-                <img src="https://i.imgur.com/H0iI9YZ.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Maxim Pulaski">
+                <img src="https://i.imgur.com/H0iI9YZ.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Maxim Pulaski" referrerpolicy="no-referrer">
             </div>
             <h2 style="margin: 0; font-size: 18px; color: #fff;">Chestor General</h2>
             <h3 style="margin: 5px 0; font-size: 22px; color: #3b82f6;">Maxim Pulaski</h3>
@@ -31,7 +31,7 @@
 
         <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.05)'" onmouseout="this.style.background='rgba(255,255,255,0.03)'">
             <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);">
-                <img src="https://i.imgur.com/ax1QyCw.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Omleturon Antrenois">
+                <img src="https://i.imgur.com/ax1QyCw.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Omleturon Antrenois" referrerpolicy="no-referrer">
             </div>
             <h2 style="margin: 0; font-size: 18px; color: #fff;">Chestor</h2>
             <h3 style="margin: 5px 0; font-size: 22px; color: #3b82f6;">Omleturon Antrenois</h3>
