--- a/pages/home_vpd.html
+++ b/pages/home_vpd.html
@@ -2,17 +2,15 @@
     <div class="crime" style="border-left: 4px solid #3b82f6; background: linear-gradient(135deg, rgba(59, 130, 246, 0.1), rgba(16, 24, 39, 0.8));">
         <h3 style="font-size: 20px; color: #fff; margin-bottom: 10px;">Ghid Oficial — Vision Police Departament (VPD)</h3>
         <p class="desc" style="font-size: 15px; line-height: 1.6; color: #cbd5e1;">
-            Bine ați venit pe portalul oficial al departamentului. Acest ghid digital este conceput pentru a oferi tuturor ofițerilor acces rapid și eficient la informațiile esențiale necesare desfășurării activității.
+            Bine ați venit pe portalul oficial al departamentului.
             <br><br>
             Aici veți găsi:
             <ul style="margin-top: 5px; color: #cbd5e1;">
-                <li>⚖ <b>Codul Penal actualizat</b> — Încadrarea corectă a faptelor și sancțiunile aferente.</li>
-                <li>👕 <b>Regulamente de Uniformă</b> — Ținutele obligatorii pentru fiecare grad.</li>
-                <li>🔫 <b>Arsenal și Echipament</b> — Armamentul autorizat în funcție de rang.</li>
-                <li>🚓 <b>Parc Auto</b> — Vehiculele disponibile pentru patrulare și intervenții.</li>
+                <li>⚖ <b>Codul Penal actualizat</b></li>
+                <li>👕 <b>Regulamente de Uniformă</b></li>
+                <li>🔫 <b>Arsenal și Echipament</b></li>
+                <li>🚓 <b>Parc Auto</b></li>
             </ul>
-            <br>
-            <i>"Siguranță și încredere"</i> — Prioritatea noastră numărul unu.
         </p>
     </div>
 
@@ -20,18 +18,26 @@
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
         
-        <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.05)'" onmouseout="this.style.background='rgba(255,255,255,0.03)'">
-            <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);">
-                <img src="https://i.imgur.com/H0iI9YZ.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Maxim Pulaski" referrerpolicy="no-referrer">
+        <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05);">
+            <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3); background-color: #0f172a;">
+                <img src="https://i.imgur.com/H0iI9YZ.jpeg" 
+                     style="width: 100%; height: 100%; object-fit: cover;" 
+                     alt="Maxim Pulaski" 
+                     referrerpolicy="no-referrer"
+                     onerror="this.src='https://placehold.co/150x150/0f172a/FFF?text=FOTO+LIPSA'; this.style.opacity='0.5'">
             </div>
             <h2 style="margin: 0; font-size: 18px; color: #fff;">Chestor General</h2>
             <h3 style="margin: 5px 0; font-size: 22px; color: #3b82f6;">Maxim Pulaski</h3>
             <p style="color: #9ca3af; font-size: 13px;">Comandant Suprem VPD</p>
         </div>
 
-        <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.05)'" onmouseout="this.style.background='rgba(255,255,255,0.03)'">
-            <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);">
-                <img src="https://i.imgur.com/ax1QyCw.jpeg" style="width: 100%; height: 100%; object-fit: cover;" alt="Omleturon Antrenois" referrerpolicy="no-referrer">
+        <div style="background: rgba(255,255,255,0.03); border-radius: 12px; padding: 20px; text-align: center; border: 1px solid rgba(255,255,255,0.05);">
+            <div style="width: 150px; height: 150px; margin: 0 auto 15px auto; overflow: hidden; border-radius: 50%; border: 3px solid #3b82f6; box-shadow: 0 0 20px rgba(59, 130, 246, 0.3); background-color: #0f172a;">
+                <img src="https://i.imgur.com/ax1QyCw.jpeg" 
+                     style="width: 100%; height: 100%; object-fit: cover;" 
+                     alt="Omleturon Antrenois" 
+                     referrerpolicy="no-referrer"
+                     onerror="this.src='https://placehold.co/150x150/0f172a/FFF?text=FOTO+LIPSA'; this.style.opacity='0.5'">
             </div>
             <h2 style="margin: 0; font-size: 18px; color: #fff;">Chestor</h2>
             <h3 style="margin: 5px 0; font-size: 22px; color: #3b82f6;">Omleturon Antrenois</h3>
