--- a/pages/arme_agent-principal.html
+++ b/pages/arme_agent-principal.html
@@ -11,25 +11,24 @@
 
 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;">
 
-    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center; transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(0,0,0,0.3)'">
-        <img src="https://static.wikia.nocookie.net/gtawiki/images/8/8f/CarbineRifleMkII-GTAV-HUD.png" style="width: 100%; height: 100px; object-fit: contain; filter: drop-shadow(0 0 5px rgba(255,255,255,0.2));" alt="Carbine MK2">
+    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center;">
+        <img src="images/carbinemk2.png" style="width: 100%; height: 100px; object-fit: contain;" alt="Carbine MK2" onerror="this.style.display='none'">
         <h4 style="margin: 10px 0 0 0; color: #fff;">Carbine Rifle Mk II</h4>
         <span style="font-size: 11px; color: #9ca3af; text-transform: uppercase;">Riflă Tactică</span>
     </div>
 
-    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center; transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(0,0,0,0.3)'">
-        <img src="https://static.wikia.nocookie.net/gtawiki/images/d/d7/HeavyPistol-GTAV-HUD.png" style="width: 100%; height: 100px; object-fit: contain; filter: drop-shadow(0 0 5px rgba(255,255,255,0.2));" alt="Heavy Pistol">
+    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center;">
+        <img src="images/heavypistol.png" style="width: 100%; height: 100px; object-fit: contain;" alt="Heavy Pistol" onerror="this.style.display='none'">
         <h4 style="margin: 10px 0 0 0; color: #fff;">Heavy Pistol</h4>
         <span style="font-size: 11px; color: #9ca3af; text-transform: uppercase;">Armă Secundară</span>
     </div>
 
-    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center; transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(0,0,0,0.3)'">
-        <img src="https://static.wikia.nocookie.net/gtawiki/images/b/b3/StunGun-GTAV-HUD.png" style="width: 100%; height: 100px; object-fit: contain; filter: drop-shadow(0 0 5px rgba(255,255,255,0.2));" alt="Taser">
+    <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center;">
+        <img src="images/taser.png" style="width: 100%; height: 100px; object-fit: contain;" alt="Taser" onerror="this.style.display='none'">
         <h4 style="margin: 10px 0 0 0; color: #fbbf24;">Stun Gun (Taser)</h4>
         <span style="font-size: 11px; color: #9ca3af; text-transform: uppercase;">Neletal</span>
     </div>
 
 </div>
-
 <br>
 <button onclick="loadHTML('selectie_grade')" style="width:100%; padding: 12px; background: rgba(255,255,255,0.1); border: none; color: white; border-radius: 6px; cursor: pointer; font-weight: 600;">« Înapoi la Grade</button>
