--- a/pages/selectie_grade.html
+++ b/pages/selectie_grade.html
@@ -5,27 +5,27 @@
 
 <div class="rank-grid">
   <button class="rank-btn" onclick="openRankPage('cadet')">
-      <span>Gradul I</span>
+      <span>Patrula</span>
       Cadet
   </button>
   
   <button class="rank-btn" onclick="openRankPage('agent')">
-      <span>Gradul II</span>
+      <span>Patrula</span>
       Agent
   </button>
   
   <button class="rank-btn" onclick="openRankPage('agent-principal')">
-      <span>Gradul III</span>
+      <span>Patrula</span>
       Agent-Principal
   </button>
   
   <button class="rank-btn" onclick="openRankPage('agent-sef')">
-      <span>Gradul IV</span>
+      <span>Patrula Experta</span>
       Agent-Sef-Principal
   </button>
   
   <button class="rank-btn" style="border-color: #3b82f6;" onclick="openRankPage('inspector')">
-      <span>Conducere</span>
+      <span>Supervizor</span>
       Inspector
   </button>
 </div>
