--- a/pages/arme_cadet.html
+++ b/pages/arme_cadet.html
@@ -14,7 +14,7 @@
     <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center;">
         <img src="images/combatpdw.png" style="width: 100%; height: 100px; object-fit: contain;" alt="Combat PDW" onerror="this.style.display='none'">
         <h4 style="margin: 10px 0 0 0; color: #fff;">Combat PDW</h4>
-        <span style="font-size: 11px; color: #9ca3af; text-transform: uppercase;">SMG Ușor</span>
+        <span style="font-size: 11px; color: #9ca3af; text-transform: uppercase;">Armă Subsonică</span>
     </div>
 
     <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.05); text-align: center;">
