--- a/pages/cap8.html
+++ b/pages/cap8.html
@@ -1,4 +1,11 @@
- <div class="crime">
+<button onclick="loadHTML('cod_penal')" 
+        style="display: inline-flex; align-items: center; gap: 8px; background: rgba(30, 41, 59, 0.6); color: #cbd5e1; border: 1px solid rgba(255,255,255,0.1); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 13px; font-weight: 600; margin-bottom: 20px; transition: 0.2s;"
+        onmouseover="this.style.background='rgba(59, 130, 246, 0.2)'; this.style.color='#fff'; this.style.borderColor='rgba(59, 130, 246, 0.4)'" 
+        onmouseout="this.style.background='rgba(30, 41, 59, 0.6)'; this.style.color='#cbd5e1'; this.style.borderColor='rgba(255,255,255,0.1)'">
+    <span>⬅</span> Înapoi la Capitole
+</button> 
+
+<div class="crime">
             <h3>(8)01. Viteza legală</h3>
             <p class="desc">Orice cetățean care încalcă limitele de viteză stabilite.<br>
             <b>Autoturism:</b> Autostrăzi 150 km/h, Drum național 100 km/h, Oraș 70 km/h.<br>
