--- a/pages/cap9.html
+++ b/pages/cap9.html
@@ -1,4 +1,11 @@
- <p class="chapter-note">ATENTIE: In cazul in care suspectul a savarsit mai multe infractiuni / crime din acest capitol o sa primeasca sentinta de la cea mai grava dintre ele. [ Cu exceptia (9)05. / (9)06. in functie de caz ] Insa aveti obligatia sa ii aduceti la cunostinta toate faptele savarsite.</p>
+<button onclick="loadHTML('cod_penal')" 
+        style="display: inline-flex; align-items: center; gap: 8px; background: rgba(30, 41, 59, 0.6); color: #cbd5e1; border: 1px solid rgba(255,255,255,0.1); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 13px; font-weight: 600; margin-bottom: 20px; transition: 0.2s;"
+        onmouseover="this.style.background='rgba(59, 130, 246, 0.2)'; this.style.color='#fff'; this.style.borderColor='rgba(59, 130, 246, 0.4)'" 
+        onmouseout="this.style.background='rgba(30, 41, 59, 0.6)'; this.style.color='#cbd5e1'; this.style.borderColor='rgba(255,255,255,0.1)'">
+    <span>⬅</span> Înapoi la Capitole
+</button> 
+
+<p class="chapter-note">ATENTIE: In cazul in care suspectul a savarsit mai multe infractiuni / crime din acest capitol o sa primeasca sentinta de la cea mai grava dintre ele. [ Cu exceptia (9)05. / (9)06. in functie de caz ] Insa aveti obligatia sa ii aduceti la cunostinta toate faptele savarsite.</p>
           <div class="crime">
               <h3>(9)01. Posesia unei arme de foc de calibru mic fără permis PORT-ARMĂ</h3>
               <p class="desc">Orice cetățean care deține asupra lui o armă de foc de calibru mic fără să aibă un permis port-armă legal. Arma poate fi considerată "asupra lui" chiar dacă se află în casă sau într-o proprietate ce-i aparține.<br>● Codul Penal (9)01 reprezintă o infracţiune care se poate pedepsi cu închiderea suspectului.</p>
