--- a/pages/uniforme_agent-principal.html
+++ b/pages/uniforme_agent-principal.html
@@ -16,7 +16,7 @@
             <span>🧥 Jachete:</span> <span style="color:white; font-weight:bold;">204 (Textura: 0)</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
-            <span>👕 Tricouri:</span> <span style="color:white; font-weight:bold;">3</span>
+            <span>👕 Tricouri:</span> <span style="color:white; font-weight:bold;">76</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
             <span>🛡️ Vestă:</span> <span style="color:white; font-weight:bold;">36</span>
@@ -25,7 +25,7 @@
             <span>🧤 Mâini/Mănuși:</span> <span style="color:white; font-weight:bold;">16</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
-            <span>👖 Pantaloni:</span> <span style="color:white; font-weight:bold;">153</span>
+            <span>👖 Pantaloni:</span> <span style="color:white; font-weight:bold;">150 (Textura: 1)</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
             <span>👞 Pantofi:</span> <span style="color:white; font-weight:bold;">204</span>
