--- a/pages/uniforme_inspector.html
+++ b/pages/uniforme_inspector.html
@@ -13,19 +13,19 @@
             <span>🧢 Pălării:</span> <span style="color:white; font-weight:bold;">191</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
-            <span>🧥 Jachete:</span> <span style="color:white; font-weight:bold;">448 (Textura: 6)</span>
+            <span>🧥 Jachete:</span> <span style="color:white; font-weight:bold;">460 (Textura: 6)</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
             <span>👕 Tricouri:</span> <span style="color:white; font-weight:bold;">163</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
-            <span>🛡️ Vestă:</span> <span style="color:white; font-weight:bold;">5</span>
+            <span>🛡️ Vestă:</span> <span style="color:white; font-weight:bold;">54</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
             <span>🧤 Mâini/Mănuși:</span> <span style="color:white; font-weight:bold;">11</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
-            <span>👖 Pantaloni:</span> <span style="color:white; font-weight:bold;">153</span>
+            <span>👖 Pantaloni:</span> <span style="color:white; font-weight:bold;">150 (Textura: 1)</span>
         </li>
         <li style="padding: 8px 0; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; justify-content: space-between;">
             <span>👞 Pantofi:</span> <span style="color:white; font-weight:bold;">204</span>
