--- a/pages/ghid_radio.html
+++ b/pages/ghid_radio.html
@@ -1,3 +1,10 @@
+<button onclick="loadHTML('ghid_dashboard')" 
+        style="display: inline-flex; align-items: center; gap: 8px; background: rgba(30, 41, 59, 0.6); color: #cbd5e1; border: 1px solid rgba(255,255,255,0.1); padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 13px; font-weight: 600; margin-bottom: 20px; transition: 0.2s;"
+        onmouseover="this.style.background='rgba(245, 158, 11, 0.2)'; this.style.color='#fff'; this.style.borderColor='rgba(245, 158, 11, 0.4)'" 
+        onmouseout="this.style.background='rgba(30, 41, 59, 0.6)'; this.style.color='#cbd5e1'; this.style.borderColor='rgba(255,255,255,0.1)'">
+    <span>⬅</span> Înapoi la Ghid
+</button>
+
 <div class="crime" style="border-left: 4px solid #f59e0b; background: rgba(245, 158, 11, 0.1); text-align: center; padding: 40px;">
     <div style="font-size: 40px; margin-bottom: 10px;">🚧</div>
     <h3 style="color: #f59e0b; margin-bottom: 10px;">PAGINĂ ÎN LUCRU</h3>
