--- a/pages/ghid_radio.html
+++ b/pages/ghid_radio.html
@@ -135,6 +135,9 @@
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
             <h4 style="margin: 0; color: #fff; font-size: 18px;">10-4 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Recepționat</span></h4>
             <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Înseamnă "Am înțeles". <span style="color:#ef4444; font-weight:bold;">NU</span> folosiți pentru "Da/Afirmativ" la întrebări.</p>
+            <div style="background: rgba(0,0,0,0.3); padding: 12px; border-radius: 6px; border-left: 3px solid #3b82f6; margin-top: 10px; font-size: 14px; font-family: monospace; color: #93c5fd;">
+                🗣 "106 mă recepționează cineva?" — "012 10-4"
+            </div>
         </div>
 
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
@@ -194,11 +197,6 @@
         </div>
 
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
-            <h4 style="margin: 0; color: #fff; font-size: 18px;">10-31 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Spargere Magazin</span></h4>
-            <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Jaf în desfășurare la un magazin.</p>
-        </div>
-
-        <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
             <h4 style="margin: 0; color: #fff; font-size: 18px;">10-38 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Traffic Stop</span></h4>
             <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Oprirea unui vehicul. Obligatoriu BK-3 înainte!</p>
             <div style="background: rgba(0,0,0,0.3); padding: 12px; border-radius: 6px; border-left: 3px solid #3b82f6; margin-top: 10px; font-size: 14px; font-family: monospace; color: #93c5fd;">
@@ -217,16 +215,17 @@
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
             <h4 style="margin: 0; color: #fff; font-size: 18px;">10-60 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Livrare Droguri / Suspect</span></h4>
             <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Persoană suspectă care sare garduri/bate la uși în zone rău famate.</p>
-        </div>
-
-        <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
-            <h4 style="margin: 0; color: #fff; font-size: 18px;">10-73 / 10-74 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Spargere Casă / Mașină</span></h4>
-            <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Sesizare efracție imobil sau vehicul.</p>
+            <div style="background: rgba(0,0,0,0.3); padding: 12px; border-radius: 6px; border-left: 3px solid #3b82f6; margin-top: 10px; font-size: 14px; font-family: monospace; color: #93c5fd;">
+                🗣 "[CallSign] am un 10-60 la cod."
+            </div>
         </div>
 
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
             <h4 style="margin: 0; color: #fff; font-size: 18px;">10-76 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— În drum spre</span></h4>
             <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Anunțați că vă deplasați către un cod/locație. ("Același trafic").</p>
+            <div style="background: rgba(0,0,0,0.3); padding: 12px; border-radius: 6px; border-left: 3px solid #3b82f6; margin-top: 10px; font-size: 14px; font-family: monospace; color: #93c5fd;">
+                🗣 "[CallSign] 10-76 ultima solicitare de transport."
+            </div>
         </div>
 
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
@@ -248,22 +247,25 @@
         <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
             <h4 style="margin: 0; color: #fff; font-size: 18px;">10-95 <span style="color: #9ca3af; font-weight: 400; font-size: 16px;">— Suspect în custodie</span></h4>
             <p style="font-size: 15px; color: #e2e8f0; margin-top: 8px; line-height: 1.5;">Suspectul a fost reținut (încătușat).</p>
+            <div style="background: rgba(0,0,0,0.3); padding: 12px; border-radius: 6px; border-left: 3px solid #3b82f6; margin-top: 10px; font-size: 14px; font-family: monospace; color: #93c5fd;">
+                🗣 "[CallSign] la ultimul 10-80 avem un 10-95 conștient."
+            </div>
         </div>
 
     </div>
 
     <h3 style="margin-top: 35px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🔤 Prescurtări Străzi</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; text-align: center;">
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Ave - Avenue</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Rd - Road</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">St - Street</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Dr - Drive</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Blvd - Boulevard</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Fwy - Freeway</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Pky - Parkway</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Pl - Place</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Aly - Alley</div>
-        <div style="background: rgba(255,255,255,0.1); padding: 12px; border-radius: 6px; font-weight: 600; font-size: 14px;">Ln - Lane</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Ave - Avenue</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Rd - Road</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">St - Street</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Dr - Drive</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Blvd - Boulevard</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Fwy - Freeway</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Pky - Parkway</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Pl - Place</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Aly - Alley</div>
+        <div style="background: rgba(255,255,255,0.1); padding: 15px; border-radius: 6px; font-weight: 700; font-size: 16px;">Ln - Lane</div>
     </div>
     <br><br>
 </div>
