--- a/pages/ghid_radio.html
+++ b/pages/ghid_radio.html
@@ -62,7 +62,7 @@
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
         <div style="background: #ef4444; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 0
-            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență Maximă (Officer Down)</div>
+            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență Maximă</div>
         </div>
         <div style="background: #10b981; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 1
