--- a/pages/ghid_radio.html
+++ b/pages/ghid_radio.html
@@ -56,13 +56,19 @@
             <h4 style="color: #f59e0b; margin: 0 0 8px 0; font-size: 16px;">8. Restricții Coduri</h4>
             <p style="font-size: 15px; color: #f1f5f9; margin: 0; line-height: 1.5;">Nu dați alte coduri peste BK-0 (doar COD 6 după 20s sau COD 0 Penitenciar).</p>
         </div>
+
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
+            <h4 style="color: #f59e0b; margin: 0 0 8px 0; font-size: 16px;">9. Urmăriri & BK</h4>
+            <p style="font-size: 15px; color: #f1f5f9; margin: 0; line-height: 1.5;">În momentul unei urmăriri, <strong>prima unitate</strong> menține codurile <strong>/BK 3</strong>, pentru informarea colegilor despre locație.</p>
+        </div>
+
     </div>
 
     <h3 style="margin-top: 35px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🚨 Coduri de Asistență</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
         <div style="background: #ef4444; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 0
-            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență Maximă</div>
+            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență Maximă (Oameni înarmați, ofițeri răniți, spargeri)</div>
         </div>
         <div style="background: #10b981; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 1
@@ -74,7 +80,7 @@
         </div>
         <div style="background: #ea580c; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 3
-            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență (Lumini + Sirene)</div>
+            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență (Lumini + Sirene - Folosit la urmariri)</div>
         </div>
         <div style="background: #3b82f6; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 4
