--- a/pages/ghid_radio.html
+++ b/pages/ghid_radio.html
@@ -80,7 +80,7 @@
         </div>
         <div style="background: #ea580c; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 3
-            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență (Lumini + Sirene - Folosit la urmariri)</div>
+            <div style="font-size: 13px; font-weight: normal; opacity: 0.9; margin-top: 4px;">Urgență (Lumini + Sirene - Folosit la urmăriri)</div>
         </div>
         <div style="background: #3b82f6; color: white; padding: 15px; border-radius: 6px; text-align: center; font-weight: bold; font-size: 16px;">
             COD 4
